# django-webpfield

./: .coveragerc  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.rst  pyproject.toml  requirements.dev.txt  requirements.txt  runtests.py  setup.cfg  setup.py
.github/workflows/: linting.yml  publish.yml
tests/: admin.py  apps.py  models.py  test_settings.py  tests.py  utils.py
webpfield/: apps.py  fields.py  image_formats.py  settings.py  utils.py  webp_storage.py
