[metadata]
name = Django WebPField
version = attr: webpfield.__version__
url = https://www.djangoproject.com/
author = Ahmed Elhakim
author_email = ahmed.w.elhakim@gmail.com
description = A simple library that convert any user uploaded images to webP format
long_description = file: README.rst
license = LICENSE
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Multimedia :: Graphics :: Presentation
project_urls =
    Documentation = https://docs.djangoproject.com/
    Release notes = https://docs.djangoproject.com/en/stable/releases/
    Funding = https://www.djangoproject.com/fundraising/
    Source = https://github.com/django/django
    Tracker = https://code.djangoproject.com/

[options]
python_requires = >=3.11
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    Pillow >= 9.5.0
    Django >= 4.2

[flake8]
exclude = build,.git,.tox,./venv/,
max-line-length = 88

[isort]
profile = black
known_first_party = django

[bdist_wheel]
universal = 1
